tests/negative/test_call_ambigious.orb
fnc foo (x:i32) () {};
fnc foo (y:i64) () {};

fnc main () () {
    sym z:i16;
    foo z;
};